# RTTI

./: .gitignore  CMakeLists.txt  README.md  rtti.cppcheck
RTTI/: ProtocolExtension.h  RTTIException.cpp  RTTIException.h  RTTITDefinition.h  RTTI_defs.cpp  RTTI_defs.h  RTTI_macros.h
RTTI_defs/: RTTI_defs.h  RTTI_macros.h
Tests_RTTI/: Tests_RTTI.sln
Tests_RTTI/Tests_RTTI/: Tests_RTTI.cpp  Tests_RTTI.vcxproj  Tests_RTTI.vcxproj.filters  rtti_res.cpp  rtti_res.h
VS2022/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  RTTI.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
VS2022/unit_tests/: cmake_install.cmake  unit_tests.vcxproj  unit_tests.vcxproj.filters
rtti-cppcheck-build-dir/: RTTI_defs.a1  Tests_RTTI.a1  files.txt  lastResults.xml  rtti_res.a1  statistics.txt
unit_tests/: CMakeLists.txt  Tests_RTTI.cpp  rtti_res.h
