cmake_minimum_required(VERSION 3.17)

project("RTTI" CXX)

set_property(GLOBAL PROPERTY USE_FOLDERS ON)

set(CMAKE_CXX_STANDARD 20 CACHE STRING "c++ stantard" FORCE)

set(EXECUTABLE_OUTPUT_PATH "${CMAKE_SOURCE_DIR}/build/${CMAKE_GENERATOR_PLATFORM}")
set(LIBRARY_OUTPUT_PATH "${CMAKE_SOURCE_DIR}/build/${CMAKE_GENERATOR_PLATFORM}")
set(ARCHIVE_OUTPUT_PATH "${CMAKE_SOURCE_DIR}/build/${CMAKE_GENERATOR_PLATFORM}")

set(CMAKE_SOLUTION_DIR "${CMAKE_SOURCE_DIR}")

add_subdirectory("unit_tests")